--- a/src/boundary/FormTicketSale.form
+++ b/src/boundary/FormTicketSale.form
@@ -78,18 +78,11 @@
                           <Group type="102" attributes="0">
                               <EmptySpace min="-2" pref="76" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Group type="102" attributes="0">
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="movieCBX" pref="305" max="32767" attributes="0"/>
-                                          <Component id="dateFLD" max="32767" attributes="0"/>
-                                      </Group>
-                                      <EmptySpace max="-2" attributes="0"/>
-                                  </Group>
-                                  <Group type="102" alignment="0" attributes="0">
-                                      <Component id="projectionCBX" max="32767" attributes="0"/>
-                                      <EmptySpace max="-2" attributes="0"/>
-                                  </Group>
+                                  <Component id="movieCBX" pref="305" max="32767" attributes="0"/>
+                                  <Component id="dateFLD" max="32767" attributes="0"/>
+                                  <Component id="projectionCBX" alignment="0" max="32767" attributes="0"/>
                               </Group>
+                              <EmptySpace max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="1" attributes="0">
                               <EmptySpace max="32767" attributes="0"/>
